# gpu-conway-game-of-life

./: .gitignore  CMakeLists.txt  CNAME  README.md  gpu-game-of-life.data  gpu-game-of-life.js  gpu-game-of-life.wasm  index.html
resources/: gol.fs
src/: main.cpp
